# libcamera

./: meson_options.txt
debian/: libcamera-ipa.install  libcamera-ipa.links  rules
debian/patches/: 0002-Distinguish-between-the-GPU-and-the-DC-nodes.patch  series
include/libcamera/ipa/: meson.build  starfive.mojom
include/linux/: jh7110-isp.h
src/ipa/starfive/: algo_interface.h  ipa_interface.h  meson.build  sc_dump_def.h  sensor_helper_imx219.cpp  sensor_helper_imx708.cpp  starfive.cpp
src/ipa/starfive/data/: imx219.json  imx708.json  jh7110-default.json  meson.build
src/ipa/starfive/helper/: meson.build  sensor_helper.cpp  sensor_helper.h
src/ipa/starfive/openAlgo/: meson.build  open_algo.cpp  starfive_controls.cpp
src/libcamera/pipeline/starfive/: meson.build  starfive.cpp  starfive.h  starfive_simple.cpp
starfive_post_script/: ipa_starfive.so.0.0.0  ipa_starfive.so.0.0.1  replace_algorithm_lib.sh  replace_and_sign_ipa_starfive_lib.sh  starfive_isp_algorithms.so.0.0.1  starfive_isp_algorithms.so.0.0.2  starfive_isp_algorithms.so.0.0.3
